--- a/readme.html
+++ b/readme.html
@@ -8,9 +8,6 @@ Branch first commit
 Branch second commit
 Branch third commit
 
-Another branch
-first commit
-Nice.
-
+Feature 1 branch.
 </body>
 </html>
