--- a/readme.html
+++ b/readme.html
@@ -8,10 +8,8 @@ Branch first commit
 Branch second commit
 Branch third commit
 
-Another branch
-first commit
 Nice.
-Working on Master  II
 I am at the head of the master.
+And master is competing with the doctor.
 </body>
 </html>
