demo with Dale, Kaushik, and Rama

--- a/readme.html
+++ b/readme.html
@@ -6,7 +6,9 @@ This is the second commit
 Now it is a branch.
 Branch first commit
 
-Another branch
-first commit
+
+This is code for feature 2
+
+
 </body>
 </html>
