--- a/readme.html
+++ b/readme.html
@@ -8,6 +8,6 @@ Branch first commit
 Branch second commit
 Branch third commit
 
-Vinit has this mod too.
+Paul With Mandana has this mod too.
 </body>
 </html>
