--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+Dale
 hello
 This is the second commit
 
@@ -8,6 +9,8 @@ Branch first commit
 
 
 This is code for feature 2
+
+Dale
 
 
 </body>
